--- a/style.css
+++ b/style.css
@@ -22,11 +22,6 @@ body {
   margin: 50px auto;
   position: relative;
   padding: 2rem;
-  box-shadow:
-    0 0 0 4px rgba(0,0,0,0.1),
-    inset 0 0 0 3px #EFEFEF,
-    inset 0 0 10px black,
-    0 0 10px rgba(0,0,0,0.2);
 }
 
 .clock-face {
@@ -34,12 +29,27 @@ body {
   width: 100%;
   height: 100%;
   transform: translateY(-3px);
+  transform: rotate(90deg);
 }
 
 .hand {
   width: 50%;
   height: 6px;
+  z-index: auto;
   background: black;
   position: absolute;
   top: 50%;
+  transform-origin: 100%;
+}
+
+.hour-hand {
+  width: 35%;
+  left: 15%;
+  z-index: 0;
+}
+
+.second-hand {
+  height: 3px;
+  background: red;
+  z-index: 1;
 }
